--- a/angular.json
+++ b/angular.json
@@ -31,10 +31,11 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": ["./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                       "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+                       "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.min.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
